implemented basic extension gui