@@ -6,6 +6,7 @@ import game.phases.PhaseDrawing;
 import io.bitbucket.plt.sdp.bohnanza.gui.*;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -20,15 +21,27 @@ public class Gui {
 
 
     public Gui() {
-        game = new GameField(3, false);
+        game = new GameField(2, true);
         gui = new GUI(new Size(1500, 1000), new Size(100, 200), new Size(180, 400), new Color(255, 255, 255), new Color(0, 0, 0));
         gui.setCardDnDHandler(this::dndUpdate);
-        nextPhaseButton = addButton("Next Phase", new Coordinate(1100, 0), new Size(100, 50), this::nextPhase);
+        nextPhaseButton = addButton("Next Phase", new Coordinate(game.getExtension()? 900: 1100, 0), new Size(100, 50), this::nextPhase);
         for (int i = 0; i < game.getPlayers().size(); i++) {
-            new Player(this, new Coordinate(0, i * 350), new Size(1100, 350), game.getPlayers().get(i), containers);
+            new Player(this, new Coordinate(0, i * 350), new Size(1100, 350), game.getPlayers().get(i), containers, game.getExtension());
         }
-        containers.add(new TradingArea(this, new Coordinate(1100, 50), new Size(100, 300), game.getTradingArea(), 0));
-        containers.add(new TradingArea(this, new Coordinate(1100, 350), new Size(100, 300), game.getTradingArea(), 1));
+        if (game.getExtension()) {
+            containers.add(new DiscoverField(this, new Coordinate(1100, 0), new Size(100, 300), game.getDiscoverArea().getDiscoverFields().get(0), 0));
+            containers.add(new DiscoverField(this, new Coordinate(1200, 0), new Size(100, 300), game.getDiscoverArea().getDiscoverFields().get(1), 1));
+            containers.add(new DiscoverField(this, new Coordinate(1300, 0), new Size(100, 300), game.getDiscoverArea().getDiscoverFields().get(2), 2));
+            containers.add(new Boss(this, new Coordinate(1100, 300), new Size(100, 300), game.getAlCabohne()));
+            containers.add(new Boss(this, new Coordinate(1200, 300), new Size(100, 300), game.getDonCorlebohne()));
+            if (game.getJoeBohnano() != null) {
+                containers.add(new Boss(this, new Coordinate(1300, 300), new Size(100, 300), game.getJoeBohnano()));
+            }
+            containers.add(new MafiaBank(this, new Coordinate(1200, 600), new Size(100, 300), game.getMafiaBank()));
+        } else {
+            containers.add(new TradingArea(this, new Coordinate(1100, 50), new Size(100, 300), game.getTradingArea(), 0));
+            containers.add(new TradingArea(this, new Coordinate(1100, 350), new Size(100, 300), game.getTradingArea(), 1));
+        }
         reload();
         gui.start();
     }
@@ -109,8 +122,9 @@ public class Gui {
         );
     }
 
-    public void reloadTrade() {
-        containers.stream().filter(o -> List.of(TradedCards.class, TradingArea.class).contains(o.getClass()))
+    @SafeVarargs
+    public final void reload(Class<? extends Reloadable>... reload){
+        containers.stream().filter(o-> Arrays.asList(reload).contains(o.getClass()))
                 .forEach(Reloadable::reload);
     }
 }
